# mockingbird

./: .gitignore  CMakeLists.txt  Mockingbird.pro  README.md  artistedit.h  artistedit.ui  main.cpp  playlistedit.cpp  playlistedit.h  playlistedit.ui  resources.qrc
docs/: admin.md
docs/media-player/: overview.md
include/components/: imageview.h  player.h  playlistplayer.h  playlistview.h  songedit.h
include/components/custom/: arrangewidget.h  filteredit.h  (+1 more)
include/core/: admin.h  artist.h  general.h  person.h  playlist.h  song.h
include/dialogs/: artistedit.h  artistview.h  playlistedit.h  playlistplayer.h  playlistview.h  songedit.h
include/models/: artistgroupmodel.h  artistmodel.h  genremodel.h  playlist.h  playlistgroupmodel.h  playlistmodel.h  proxyplaylistmodel.h  songdelegate.h
include/windows/: adminwindow.h  welcomewindow.h
src/components/: imageview.cpp  player.cpp  playlistplayer.cpp  playlistview.cpp  songedit.cpp
src/core/: admin.cpp  artist.cpp  general.cpp  person.cpp  playlist.cpp  song.cpp
src/dialogs/: artistedit.cpp  artistview.cpp  playlistedit.cpp  playlistplayer.cpp  playlistview.cpp  songedit.cpp
src/models/: artistgroupmodel.cpp  artistmodel.cpp  genremodel.cpp  playlist.cpp  playlistgroupmodel.cpp  playlistmodel.cpp  proxyplaylistmodel.cpp  songdelegate.cpp
src/windows/: adminwindow.cpp  welcomewindow.cpp
ui/components/: player.ui  playlistplayer.ui  playlistview.ui  songedit.ui
ui/dialogs/: artistedit.ui  artistview.ui  playlistedit.ui  playlistview.ui  songedit.ui
ui/windows/: adminwindow.ui  welcomewindow.ui
(+6 files in other folders)
